welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var niveaux = 0
  for (i <- 0 to nums.length-2){
    if (nums(i)!=nums(i+1)){
      nivaux=niveaux+1
    }
  }
  return niveaux
}